--- a/platform/themes/wowy/assets/sass/components/_card.scss
+++ b/platform/themes/wowy/assets/sass/components/_card.scss
@@ -4,6 +4,7 @@
     background: #fff;
     text-align: center;
     border: 1px solid #e9ebf0;
+    width: 160px !important;
 
     h5 {
         text-transform: uppercase;
